--- a/css/employeePayrollForm.css
+++ b/css/employeePayrollForm.css
@@ -157,8 +157,11 @@ select {
     cursor: pointer;
 }
 
+.button:hover{
+    background: #E2E2E2 0% 0% no-repeat padding-box;
+}
+
 .submitButton{
-    /* border: none; */
     background-color: #f5f5f5;
     margin-right: 30px;
 }
@@ -226,4 +229,9 @@ select {
         font-weight: bold;
     }
 
+    .button{
+        padding: 3px;
+        font-size: 16px;
+        min-width: 100px;
+    }
 }
